--- a/index.html
+++ b/index.html
@@ -6,9 +6,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
+    <script src="myscripts.js"></script>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
 <body>
+  <div class="dropdown">
+    <button onclick="myFunction()" class="dropbtn">BROWSE CATEGORIES</button>
+    <div id="myDropdown" class="dropdown-content">
+      <a href="#">Fashion</a>
+      <a href="#">Electronics</a>
+      <a href="#">Stationaries</a>
+    </div>
+  </div>
+
+
+
+
   <div class="container">
     <div  class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
@@ -18,18 +31,7 @@
         <div class="carousel-item" data-bs-interval="3000">
           <img src="Images/2.jpeg" class="d-block w-100" alt="...">
         </div>
-        <div class="carousel-item" data-bs-interval="3000">
-          <img src="Images/3.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item" data-bs-interval="3000">
-          <img src="Images/4.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item" data-bs-interval="3000">
-          <img src="Images/5.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item" data-bs-interval="3000">
-          <img src="Images/6.jpg" class="d-block w-100" alt="...">
-        </div>
+ 
         <div class="carousel-item" data-bs-interval="3000">
           <img src="Images/7.jpeg" class="d-block w-100" alt="...">
         </div>
